Fixes #2936 Fix rules table overflow

--- a/rudder-web/src/main/webapp/style/rudder.css
+++ b/rudder-web/src/main/webapp/style/rudder.css
@@ -420,6 +420,7 @@ tr.foot {
 tr.head {
   background-image: -webkit-linear-gradient(top, #888, #555);
   background-image: -moz-linear-gradient(top, #888, #555);
+  background-color: #666;
 }
 .head th.first {
    padding: 5px 10px;
@@ -2440,12 +2441,6 @@ table thead th {
 .dataTables_wrapper table {
 	border-collapse: collapse;
 }
-
-table thead tr.head .ui-state-default {
-  background: url(../images/tableau/fdTaboHead.jpg) top left repeat-x;
-}
-
-
 
 #serverGrid_wrapper .dataTables_wrapper_top {
   border-top-left-radius: 0px !important;
